# bitcoin-clone

./: .gitignore  CMakeLists.txt  README.md
include/: Block.h  BtcLib.h  Chain.h  HashLib.h  Transaction.h  TxInput.h  TxOutput.h  Wallet.h  hashlib.h
libs/boost_1_76_0/: project-config.jam
libs/boost_1_76_0/bin.v2/: project-cache.jam
libs/boost_1_76_0/stage/lib/: libboost_atomic.so.1.76.0  libboost_chrono.so.1.76.0  libboost_container.so.1.76.0  libboost_context.so.1.76.0  libboost_contract.so.1.76.0  libboost_date_time.so.1.76.0  libboost_fiber.so.1.76.0  libboost_filesystem.so.1.76.0  libboost_graph.so.1.76.0  libboost_iostreams.so.1.76.0  libboost_json.so.1.76.0  libboost_locale.so.1.76.0  libboost_math_c99.so.1.76.0  libboost_math_c99f.so.1.76.0  libboost_math_c99l.so.1.76.0  libboost_math_tr1.so.1.76.0  libboost_math_tr1f.so.1.76.0  libboost_math_tr1l.so.1.76.0  libboost_nowide.so.1.76.0  libboost_prg_exec_monitor.so.1.76.0  libboost_regex.so.1.76.0  libboost_serialization.so.1.76.0  libboost_stacktrace_addr2line.so.1.76.0  libboost_stacktrace_backtrace.so.1.76.0  libboost_stacktrace_basic.so.1.76.0  libboost_stacktrace_noop.so.1.76.0  libboost_system.so.1.76.0  libboost_thread.so.1.76.0  libboost_type_erasure.so.1.76.0  libboost_wave.so.1.76.0  libboost_wserialization.so.1.76.0
libs/boost_1_76_0/stage/lib/cmake/boost_atomic-1.76.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  (+1 more)
src/: Block.cpp  BtcLib.cpp  Chain.cpp  HashLib.cpp  Transaction.cpp  TxInput.cpp  TxOutput.cpp  Wallet.cpp  hashlib.cpp  main.cpp  miner.cpp  wallet.cpp
(+94 files in other folders)
